Fix opacity in nav/hero section & realign nav bar text

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,8 +1,12 @@
 :root {
-    --background-color:  #b4a1b1;
-    --secondary-color: #806a7a;
+    --background-color:  #f4f4f4;
+    --secondary-color: rgba(0,0,0,0.75);
     --text-shadow: rgba(0, 0, 0, 0.75);
+    --hover-color: #806a7a ;
 }
+/* ! Backup colors
+#b4a1b1; 
+#806a7a */
 
 *{
     box-sizing: border-box;
@@ -34,9 +38,7 @@ body h1 {
 
 header {
     display: flex;
-    position: -webkit-sticky;
-    position: sticky;
-    justify-content: space-between;
+    justify-content: center;
     background-color: var(--secondary-color);
     background-size: cover;
     background-attachment: fixed;
@@ -45,7 +47,7 @@ header {
     color: white;
     top: 0;
     z-index: 9999;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 header h1 {
@@ -81,7 +83,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background-color:  var(--background-color);
+    background-color:  var(--hover-color);
     border-radius: 15px;
 }
 
@@ -99,17 +101,19 @@ section {
     padding: 60px;
 }
 
-#hero {
-    font-style: oblique;
-    line-height: 1.3;
+.header-hero-img {
+    background-size: cover;
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
+    font-style: oblique;
+        line-height: 1.3;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
 
-#hero::before {
+.header-hero-img::before {
     content: "";
     background-image: url("https://media.istockphoto.com/photos/leaves-skeleton-background-picture-id637444690?k=20&m=637444690&s=612x612&w=0&h=K0-gVqAf8kZi7CskvFnBUx-Oo60xUfy4oh7aCxZ5jW0=");
     background-size: cover;
@@ -118,19 +122,11 @@ section {
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: 0.3;
+    opacity: 0.4;
 }
 
-#hero p, h3 {
-    position: relative;
-    opacity: 1;
-}
-
-/*  TODO: fix the enjoy positioning */
-#enjoy {
-    display: flex;
-    padding-top: 20px;
-    justify-content: flex-end;
+#hero-section {
+    text-align: center;
 }
 
 #bio {
@@ -140,7 +136,8 @@ section {
 }
 
 #bio img {
-    height: 250px;
+    height: 320px;
+    width: 220px;
     display: flex;
     justify-content: center;
     align-items: center;
